# src/routes/publicaciones.routes.js
@@ -1,11 +1,18 @@
 const { Router } = require('express')
 const publicacionesController = require('../controllers/publicaciones.controllers')
 const postTagsController = require('../controllers/postTags.controllers')
+const comentariosController = require("../controllers/comentarios.controllers")
 
+//midlewares de Publicacion
 const {
     validarPublicacion,
     validarPublicacionId
 } = require("../middlewares/publicaciones.middleware")
+
+//midleware de comentario
+const {
+    validarComentario
+} = require("../middlewares/comentarios.middleware")
 
 const router = Router()
 
@@ -19,5 +26,9 @@ router.delete('/:id', validarPublicacionId, publicacionesController.eliminarPubl
 router.post('/:postId/etiquetas/:tagId', postTagsController.agregarEtiqueta)
 
 router.get('/:postId/etiquetas', postTagsController.obtenerEtiquetasDePost)
+
+// Relacion Post - Comment
+
+router.post('/:id/comentarios', validarPublicacionId, validarComentario, comentariosController.crearComentario)
 
 module.exports = router
