# src/schema/comentarios.schema.js
@@ -9,7 +9,12 @@ const schemaComentarios = Joi.object( {
     is_visible: Joi.boolean().required().messages({
         "boolean.base": "El campo is_visible debe ser booleano",
         "boolean.empty": "El campo is_visible es obligatorio"
-    })
+    }),
+    user_nickname: Joi.string().min(3).max(50).required().messages({
+        "string.base": "El campo user_nickname debe ser texto",
+        "string.empty": "El campo user_nickname es obligatorio",
+        "string.min": "El campo user_nickname debe tener al menos 3 caracteres"
+    }),
 })
 
 module.exports = schemaComentarios
